--- a/views/secret.pug
+++ b/views/secret.pug
@@ -2,3 +2,5 @@ extends layout.pug
 block content
     h1= 'This is password protected content'
     p= 'Some very secret text'
+    form(method='get' action='/logout')
+        button(type='submit')= 'logout'
